// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI --hot webpack 5 1`] = `
"<i> [webpack-dev-server] Project is running at http://localhost:8080/
<i> [webpack-dev-server] Content not from webpack x.x.x served from 'Xdir/static' directory
<i> [webpack-dev-middleware] asset main.js X KiB [emitted] (name: main)
<i> runtime modules X KiB 10 modules
<i> cacheable modules X KiB
<i>   modules by path ../../../node_modules/ X KiB 16 modules
<i>   modules by path ../../../client/ X KiB
<i>     modules by path ../../../client/default/ X KiB 8 modules
<i>     modules by path ../../../client/transpiled-modules/*.js X KiB 2 modules
<i>     modules by path ../../../client/clients/*.js X KiB
<i>       ../../../client/clients/WebsocketClient.js X KiB [built] [code generated]
<i>       ../../../client/clients/BaseClient.js X KiB [built] [code generated]
<i>   ./foo.js X bytes [built] [code generated]
<i> ../../../node_modules/webpack/hot/ sync nonrecursive ^\\\\.\\\\/log$ X bytes [built] [code generated]
<i> webpack x.x.x compiled successfully in X ms
<i> [webpack-dev-middleware] Compiled successfully."
`;

exports[`CLI --no-hot webpack 5 1`] = `
"<i> [webpack-dev-server] Project is running at http://localhost:8080/
<i> [webpack-dev-server] Content not from webpack x.x.x served from 'Xdir/static' directory
<i> [webpack-dev-middleware] asset main.js X KiB [emitted] (name: main)
<i> runtime modules X bytes 3 modules
<i> cacheable modules X KiB
<i>   modules by path ../../../node_modules/ X KiB 14 modules
<i>   modules by path ../../../client/ X KiB
<i>     modules by path ../../../client/default/ X KiB 8 modules
<i>     modules by path ../../../client/transpiled-modules/*.js X KiB 2 modules
<i>     modules by path ../../../client/clients/*.js X KiB
<i>       ../../../client/clients/WebsocketClient.js X KiB [built] [code generated]
<i>       ../../../client/clients/BaseClient.js X KiB [built] [code generated]
<i>   ./foo.js X bytes [built] [code generated]
<i> ../../../node_modules/webpack/hot/ sync nonrecursive ^\\\\.\\\\/log$ X bytes [built] [code generated]
<i> webpack x.x.x compiled successfully in X ms
<i> [webpack-dev-middleware] Compiled successfully."
`;
